# ptcpp

./: .gitignore  CMakeLists.txt  README.md  image_test.cpp  ppm_test.cpp  ray.hpp  ray_test  ray_test.cpp  util.hpp  vec3_test  vec3_test.cpp
src/: CMakeLists.txt  aggregate.h  aggregate.hpp  camera.h  camera.hpp  cube.h  diffuse.h  hit.h  hit.hpp  image.h  image.hpp  light.h  main.cpp  material.h  quaternion.h  random.h  ray.h  ray.hpp  shape.h  sphere.h  sphere.hpp  transform.h  util.h  util.hpp  vec3.h  vec3.hpp
src/app/: CMakeLists.txt  draw_shadow.cpp  montecarlo.cpp  nee.cpp  path_tracing.cpp  phase_function.cpp  super_sampling.cpp  volume.cpp
test/: CMakeLists.txt  aggregate_test.cpp  draw_shadow.cpp  image_test.cpp  pinhole_camera_test.cpp  ppm_test.cpp  quaternion_test.cpp  ray_test.cpp  single_sphere_tracing_test.cpp  sphere_test.cpp  super_sampling.cpp  vec3_test.cpp
